--- a/mongoDB/package.json
+++ b/mongoDB/package.json
@@ -16,10 +16,12 @@
     "connect-mongo": "^4.6.0",
     "core-js": "^3.3.2",
     "css-loader": "^3.2.0",
+    "csurf": "^1.11.0",
     "dotenv": "^16.0.0",
     "ejs": "^3.1.7",
     "express": "^4.18.1",
     "express-session": "^1.17.2",
+    "helmet": "^5.0.2",
     "mongoose": "^6.3.2",
     "regenerator-runtime": "^0.13.3",
     "style-loader": "^1.0.0"
